Attemps to fix mobile overflow carousel

--- a/styles/scss/homePage/_home.module.scss
+++ b/styles/scss/homePage/_home.module.scss
@@ -3,6 +3,7 @@
     height: 100vh;
     width: 100vw;
     position: fixed;
+    overflow-y: hidden;
     top: 0;
     left: 0;
 }
